# intelligent-distributed-ips

./: .gitattributes  .gitignore  LICENSE  README.md
ansible/: requirements.txt  requirements.yml  setup_k8s.yaml
ansible/inventory/: inventory.ini  inventory.yml
ansible/roles/k8s_node/tasks/: main.yaml
ids-metrics/sampler/: README.md
ids-metrics/sampler/client/: Cargo.toml  README.md  client-config.toml
ids-metrics/sampler/client/src/: config.rs  main.rs  stats.rs
ids-metrics/sampler/client/src/generator/: mod.rs  worker.rs
ids-metrics/sampler/server/: Cargo.toml  README.md
ids-metrics/sampler/server/server/: Cargo.toml  build.rs
ids-metrics/sampler/server/server-common/: Cargo.toml
ids-metrics/sampler/server/server-common/src/: lib.rs
ids-metrics/sampler/server/server-ebpf/: Cargo.toml
ids-metrics/sampler/server/server-ebpf/src/: main.rs
ids-metrics/sampler/server/server/src/: main.rs
ids-metrics/sampler/server/server/src/ebpf/: loader.rs  mod.rs
ids-metrics/sampler/server/server/src/metrics/: aggregator.rs  collector.rs  mod.rs  models.rs
ids-metrics/sampler/server/server/static/: index.html
issues/: 1.md
terraform/development/: .gitignore  .terraform.lock.hcl  01-auth.auto.tfvars  02-proxmox.auto.tfvars  README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
terraform/development/modules/proxmox/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
terraform/development/modules/proxmox/vm/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
(+3 files in other folders)
