[package]
name = "sampler-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
humantime = "2.1"
byte-unit = "5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
