[package]
name = "server-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
server-common = { path = "../server-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "server"
path = "src/main.rs"
